--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "de-smart/layout",
+    "name": "desmart/laravel-layout",
     "description": "Simple page structure controller for Laravel4",
     "authors": [
         {
@@ -12,9 +12,6 @@
         "illuminate/support": "4.0.x"
     },
     "autoload": {
-        "classmap": [
-            "src/migrations"
-        ],
         "psr-0": {
             "DeSmart\\Layout": "src/"
         }
