removed Redirect exception

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
             "DeSmart\\Layout": "src/"
         }
     },
+    "suggest": {
+      "desmart/response-exception": "To do overwrite response from action"
+    },
     "minimum-stability": "dev",
     "require-dev": {
         "illuminate/container": "4.0.x"
