--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.x",
-        "illuminate/routing": "4.0.x"
+        "illuminate/support": "4.0.x"
     },
     "autoload": {
         "psr-0": {
@@ -22,6 +21,9 @@
     },
     "minimum-stability": "dev",
     "require-dev": {
-        "illuminate/container": "4.0.x"
+        "illuminate/routing": "4.0.x",
+        "illuminate/container": "4.0.x",
+        "illuminate/view": "4.0.x",
+        "mockery/mockery": "0.8.*"
     }
 }
